--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -23,6 +23,7 @@ Refer to the guide <<SettingUp#, here>>.
 == Design
 
 [[Design-Architecture]]
+
 === Architecture
 
 .Architecture Diagram
@@ -88,8 +89,12 @@ The `UI` component,
 * Executes user commands using the `Logic` component.
 * Listens for changes to `Model` data so that the UI can be updated with the modified data.
 
+
 [[Design-Logic]]
 === Logic component
+
+//tag::shaun-logic[]
+
 ==== Overview of Logic Component
 
 [[fig-LogicClassDiagram]]
@@ -104,6 +109,8 @@ link:{repoURL}/src/main/java/seedu/address/logic/Logic.java[`Logic.java`]
 .  The command execution can affect the `Model` (e.g. adding a question).
 .  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
 .  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
+
+//end::shaun-logic[]
 
 //tag::wilfred-logic[]
 ==== Managing parsing in Configuration and Quiz Mode
@@ -156,6 +163,7 @@ To guard against null values, default values are provided to every field in the 
 Objects that call `CommandResult` can choose to customise `CommandResult` according to their needs.
 //end::wilfred-logic[]
 
+//tag::shaun-designmodel[]
 [[Design-Model]]
 === Model component
 
@@ -170,6 +178,7 @@ The `Model`,
 * stores the Question Bank data.
 * exposes an unmodifiable `ObservableList<Answerable>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
 * does not depend on any of the other three components.
+//end::shaun-designmodel[]
 
 //tag::wilfred-answerable[]
 ==== The `Answerable` Class
@@ -194,6 +203,7 @@ For all subclasses, there cannot be any duplicates of answers. For example, if a
 wrong answers, it cannot have "option1" as its correct answer or another wrong answer.
 //end::wilfred-answerable[]
 
+//tag::shaun-storage[]
 [[Design-Storage]]
 === Storage component
 
@@ -206,6 +216,7 @@ The `Storage` component,
 
 * can save `Question Bank` objects in json format and read it back.
 * can save the Test Bank data in json format and read it back.
+//end::shaun-storage[]
 
 [[Design-Commons]]
 === Common classes
@@ -216,9 +227,10 @@ Classes used by multiple components are in the `seedu.revision.commons` package.
 
 This section describes some noteworthy details on how certain features are implemented.
 
-// tag::undoredo[]
-=== [Proposed] Add questions feature
-==== Proposed Implementation
+//tag::shaun-add[]
+
+=== Add questions feature
+==== Implementation
 
 The add questions mechanism is facilitated by `AddCommand`.
 It extends `Command` that will read a user command and execute the command result.
@@ -233,24 +245,19 @@ Given below is an example usage scenario and how the add questions mechanism beh
 
 Step 1. The user types `add type/mcq q/"string of question" x/option1 x/option2 y/option3 x/option4 cat/[UML] diff/[easy]`, this command adds a easy difficulty mcq question about UML with 4 options and option3 being the correct answer.
 
-image::UndoRedoState0.png[]
+image::InitialState.png[]
 
 Step 2. The command is being parse into the parser and the AddCommand object of type Command will be created.
 
-image::UndoRedoState1.png[]
+image::FirstState.png[]
 
 Step 3. The AddCommand object will call its `addMcq()` method, this method will read the command and store the question with the answers into the `test bank` accordingly.
 
-image::UndoRedoState2.png[]
+image::SecondState.png[]
 
 [NOTE]
 If a command fails its execution, it will not save the question into the `revision tool`. It will however throw an invalid command exception.
-
-The following sequence diagram shows how the add question operation works:
-
-image::UndoSequenceDiagram.png[]
-
-NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
+//end::shaun-add[]
 
 ==== Design Considerations
 
@@ -268,7 +275,6 @@ NOTE: The lifeline for `UndoCommand` should end at the destroy marker (X) but du
 * **Alternative 2:** Use multiple steps to guide user on adding the question.
 ** Pros: User do not have to memorize the correct format and less chance for an invalid command input.
 ** Cons: Slow to add questions, requiring multiple steps to fully complete a question.
-// end::undoredo[]
 
 //tag::wilfred-quiz[]
 === Quiz Mode
